--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ flake8 = "*"
 autopep8 = "*"
 django-filter = "*"
 psycopg2 = "*"
+ipython = "*"
+gunicorn = "*"
 
 [requires]
 python_version = "3.8"
